--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,13 @@
     "action": {
         "default_icon": "pragrest.png"
     },
-    "conent_scripts": {
+    "content_scripts": [
+        {
+        "matches": ["<all_urls>"],
+        "js": ["contentScript.js"],
         "css": ["styles.css"]
-    },
+        }
+    ],
     "background": {
     "service_worker": "background.js"
     }
