--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,16 @@
     "name": "Hello Extensions",
     "description": "Base Level Extension",
     "version": "1.0",
+    "permissions": [
+        "tabs",
+        "activeTab"
+    ],
     "action": {
         "default_icon": "pragrest.png"
     },
     "content_scripts": [
         {
-        "matches": ["<all_urls>"],
+        "matches": ["https://www.example.com/*"],
         "js": ["contentScript.js"],
         "css": ["styles.css"]
         }
